# ofxstatement-scalable

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  test.yml
src/ofxstatement_scalable/: __init__.py  plugin.py
tests/: test_plugin.py
