[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ofxstatement-scalable"
version = "0.1.0"
authors = [
  { name="Eduard Ralph" },
]
description = "ofxstatement plugin for Scalable Capital statements"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Natural Language :: English",
    "Topic :: Office/Business :: Financial :: Accounting",
    "Topic :: Utilities",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]
keywords = ["ofx", "banking", "statement", "plugin", "ofxstatement", "scalable", "scalable capital"]
dependencies = [
  "ofxstatement",
  "pdfplumber",
]

[project.urls]
Homepage = "https://github.com/eduralph/ofxstatement-scalable/"

[project.entry-points."ofxstatement"]
scalable = "ofxstatement_scalable.plugin:ScalablePlugin"

[project.optional-dependencies]
dev = [
  "pytest",
  "mypy",
  "black",
  "ruff",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
strict = false
ignore_missing_imports = true

[tool.ruff]
line-length = 100
